changed card bg

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ nav ul li a:hover {
 }
 
 .cardd {
-    background-color: rgb(210, 224, 245);
+    background-color: #efe4f6;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
